testsuite/testcases/src/test/cases/unicode-codepoint-escapes/UnicodeCodePointEscapes-f-5-flex.output

Error in file "src/test/cases/unicode-codepoint-escapes/UnicodeCodePointEscapes-f-5.flex" (line 7): 
Hexadecimal code point is greater than the maximum allowed code point
[AB\u{1E}C\u{FFFFFF}123] { }
             ^
